Add 'GET cities' endpoint
