# weather-api/src/main/java/org/example/weather/api/Constants.java
@@ -1,0 +1,6 @@
+package org.example.weather.api;
+
+class Constants {
+    static final int PAGE_SIZE = 25;
+    static final String TOTAL_COUNT = "total_count";
+}
